Aggie rating (top right) spacing fixed

--- a/reviews/app/assets/stylesheets/reviews.scss
+++ b/reviews/app/assets/stylesheets/reviews.scss
@@ -612,6 +612,7 @@ img{
 	display: flex;
 	justify-content: flex-end;
 	width: 100%;
+  padding-right: 15px;
 }
 
 .show-button {
